# codemux-cli

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  biome.json  build.rs  cspell.json  dist-workspace.toml  justfile  release.toml
.github/: build-setup.yml
.github/workflows/: build-web-assets.yml  release.yml
app/: README.md  app.json  biome.json  metro.config.js  package-lock.json  package.json  tsconfig.json
app/src/: global.css
app/src/app/: _layout.tsx  index.tsx
app/src/components/: DiffLine.tsx  EmptyProjectsState.tsx  ErrorState.tsx  FileDiffHeader.tsx  GitDiffViewer.tsx  LastMessage.tsx  LoadingState.tsx  ProjectContainer.tsx  ProjectsHeader.tsx  SessionCard.tsx  Terminal.tsx  TerminalCell.tsx  ThemeToggle.tsx
app/src/hooks/: useWebSocketWithReconnect.ts
app/src/lib/: apiClient.ts  theme.ts
app/src/stores/: terminalStore.ts
app/src/types/: api.ts  bindings.ts  jsonapi.ts
app/src/utils/: payloadOptimization.ts
benches/: real_session_benchmark.rs  terminal_parsing_benchmark.rs
bindings/: ClientMessage.ts  GridCell.ts  GridUpdateMessage.ts  JsonApiDocument.ts  JsonApiError.ts  JsonApiErrorDocument.ts  JsonApiRelationship.ts  JsonApiResource.ts  JsonApiResourceIdentifier.ts  JsonApiResourceRef.ts  KeyCode.ts  KeyEvent.ts  KeyModifiers.ts  ProjectAttributes.ts  ProjectInfo.ts  ProjectListResponse.ts  ProjectRelationships.ts  ProjectResourceTS.ts  ProjectWithSessions.ts  ScrollDirection.ts  SerializablePtySize.ts  ServerMessage.ts  SessionAttributes.ts  SessionInfo.ts  SessionResourceTS.ts  SessionResponse.ts  SessionType.ts  TerminalColor.ts
docs/: 0.1-API.md  0.1-ARCHITECTURE.md  0.1-CHANGELOG.md  0.1-MIGRATION-GUIDE.md  API_CONFIGURATION.md  GIT_DIFF_IMPLEMENTATION.md  HTTP_CLIENT.md
expo-app/: package-lock.json  package.json  tailwind.config.js
expo-app/src/: global.css
expo-app/src/app/: +html.tsx  _layout.tsx  index.tsx
expo-app/src/components/: AlertDemo.tsx  DiffLine.tsx  EmptyProjectsState.tsx  ErrorState.tsx  FileDiffHeader.tsx  (+9 more)
src/: client.rs  config.rs  lib.rs  main.rs  prompt_detector.rs  pty.rs  pty_session.rs  session.rs  tui.rs  tui_writer.rs  web.rs
src/assets/: embedded.rs  mod.rs
src/capture/: analyze.rs  capture.rs  main.rs  mod.rs  replay.rs  session.rs  session_data.rs  test_chunking.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/client/: http.rs  mod.rs  tui.rs
src/core/: config.rs  json_api.rs  mod.rs  pty_session.rs  session.rs  websocket.rs
src/server/: claude_cache.rs  manager.rs  mod.rs  web.rs
src/utils/: mod.rs  path.rs  prompt_detector.rs  tui_writer.rs
static/: index.html  session.html
tests/: sample_terminal_output.txt  test_alacritty_api.rs  test_scroll_behavior.rs
website/: README.md  package-lock.json  package.json
website/components/: InstallationTabs.tsx  SmartInstallButton.tsx
website/lib/: layout.shared.tsx
website/public/: install.ps1  install.sh
(+42 files in other folders)
