[package]
name = "codemux"
version = "0.0.12"
edition = "2021"
description = "Terminal multiplexer for AI coding CLIs - code from anywhere with mobile-ready UI"
homepage = "https://www.codemux.dev"
repository = "https://github.com/codemuxlab/codemux-cli"

[[bin]]
name = "codemux"
path = "src/main.rs"

# [[bin]]
# name = "codemux-capture"
# path = "src/capture/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["add-extension", "cors"] }
tokio-tungstenite = "0.24"
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
open = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tui-term = "0.1.11"
vt100 = { path = "vt100" }
rust-embed = { version = "8.5", features = ["debug-embed"] }
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
ts-rs = { version = "11.0", features = ["serde-compat"] }
notify = "6.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alacritty_terminal = "0.25.0"

[[bench]]
name = "terminal_parsing_benchmark"
harness = false

[[bench]]
name = "real_session_benchmark"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
